[package]
name = "LearnRust"
version = "0.1.0"
edition = "2021"

[[bin]]
#name = "helloworld"
#path = "hello_world/helloworld.rs"

name = "variables"
path = "variables/variables.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"